* Version 0.2.3 (unreleased)

* Version 0.2.2 (released 2018-04-11)
 ** Bugfix: Better handling of unplugged devices on MacOS and avoid leaking threads.

* Version 0.2.1 (released 2018-04-10)
 ** Add server example.
 ** Parse AttestationObjects that use string keys (Webauthn).
 ** Fix bug in handling packets with the wrong channel id.

* Version 0.2.0 (released 2018-04-05)
 ** Changed name of project to python-fido2 to better reflect its scope.
 ** Added attestation and assertion verification methods.
 ** A lot of name changes, moved classes, etc.
 ** New example for multi-device use.

* Version 0.1.0 (released 2018-03-16)
 ** First beta release.